# stt_portal

./: .gitignore  .pre-commit-config.yaml  Makefile  manage.py  pyproject.toml  readme.md  setup.cfg
stt/: config.py  urls.py  wsgi.py
stt/base/: apps.py  blocks.py  models.py  rich_text_features.py  utils.py  wagtail_hooks.py
stt/base/migrations/: 0001_initial.py  0002_delete_footer.py  0003_initial.py
stt/base/templatetags/: base_tags.py  navigation_tags.py
stt/event/: apps.py  models.py
stt/event/migrations/: 0001_initial.py  0002_eventsectionpage_alter_eventpage_options_and_more.py  0003_eventsectionpage_menu_order_index.py  0004_remove_eventsectionpage_menu_order_index.py  0005_eventpage_body_eventsectionpage_body_and_more.py  0006_alter_eventpage_body.py  0007_eventpage_image.py  0008_eventpage_end_eventpage_start.py  0009_alter_eventpage_start.py  0010_alter_eventpage_end.py  0011_eventsectionpage_elements_per_page.py  0012_eventpage_gallery.py  0013_alter_eventpage_gallery.py  0014_alter_eventpage_body.py  0015_alter_eventpage_body_alter_eventsectionpage_body.py  0016_alter_eventpage_body.py
stt/event/templatetags/: event_tags.py
stt/gallery/: apps.py  models.py
stt/gallery/migrations/: 0001_initial.py  0013_gallerypage_skin.py  (+12 more)
stt/help/: apps.py  blocks.py  models.py
stt/home/: blocks.py  models.py
stt/knowledge/: apps.py  models.py
stt/news/: apps.py  models.py
stt/search/: views.py
stt/service_app/: apps.py  models.py
stt/settings/: base.py  dev.py  production.py
stt/technology/: apps.py  models.py
stt/templates/: base.html
(+151 files in other folders)
